docs/.vitepress/theme/styles/global.css
body {
	background-image: url(/pattern.svg);
}

pre code {
	tab-size: 2 !important;
}

a:has(code) {
	text-decoration: none !important;
}

.vp-doc :not(pre) > code {
	padding: 4px 5px 3px 5px !important;
}

.vp-doc a {
	color: var(--vp-c-text-1);
	text-decoration: underline;
	text-underline-offset: 4px;
	text-decoration-color: var(--vp-c-code-underline);
}

.vp-doc strong {
	color: var(--vp-c-text-1);
	font-weight: 500;
}

.vp-doc a > code {
	color: var(--vp-c-text-1);
	padding: 4px 5px 5px 5px !important;
	transition: color 0.15s, border 0.15s;
	text-decoration: underline;
	text-underline-offset: 4px;
	text-decoration-color: var(--vp-c-code-underline);
}

.vp-doc .custom-block code {
	color: var(--vp-c-text-2) !important;
	font-weight: 700;
	background-color: var(--vp-c-bg-soft);
}

.vp-doc .custom-block a {
	color: var(--vp-c-text-1);
	text-decoration: underline;
	text-underline-offset: 3px;
	text-decoration-color: var(--vp-c-code-underline);
	font-weight: 400;
}

.vp-doc .custom-block.warning a {
	color: var(--vp-custom-block-warning-border) !important;
	text-decoration-color: var(--vp-custom-block-warning-border);
}

.vp-doc .custom-block.info a {
	text-decoration-color: var(--vp-c-code-underline);
}

hr {
	margin: 4rem 0 !important;
}

.vp-doc h2 {
	margin-top: 5rem !important;
	display: inline-flex;
	align-items: baseline;
	gap: 0.5rem;
	width: 100%;
}

.vp-doc h2 > .VPBadge {
	flex-grow: 1;
	flex-shrink: 0;
}

.vp-doc .preface + h2 {
	margin-top: 4rem !important;
}

.vp-doc h3 {
	margin-top: 3rem !important;
}

.vp-doc h4 {
	margin-top: 3rem !important;
}

.vp-doc .custom-block {
	margin: 3rem 0 !important;
}

.vp-doc h1 + h2 {
	margin-top: 2.5rem !important;
}

footer p.message {
	display: inline-flex;
	align-items: center;
}

/* Sidebar scrollbar */

aside.VPSidebar {
	scrollbar-width: thin;
	scrollbar-color: var(--vp-c-scrollbar) transparent;
}

aside.VPSidebar::-webkit-scrollbar {
	width: 10px;
	height: 10px;
}

aside.VPSidebar::-webkit-scrollbar-track {
	background: transparent;
}

aside.VPSidebar::-webkit-scrollbar-thumb {
	border-radius: 100vh;
	background: var(--vp-c-scrollbar) !important;
	border: 3px solid var(--vp-c-scrollbar) !important;
}

